...
                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                </textFieldCell>
                                <accessibility description="Enter device name input" help="enter your device name" identifier="deviceNameInput"/>
                            </textField>
                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="UaT-BK-tIi">
                                <rect key="frame" x="202" y="47" width="77" height="32"/>
                                <buttonCell key="cell" type="push" title="Submit" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="uja-8x-weJ">
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="system"/>
                                </buttonCell>
                                <accessibility description="Submit entered device name" help="For setting device name" identifier="submitName"/>
                                <connections>
                                    <action selector="submitDeviceName:" target="XfG-lQ-9wD" id="Jsc-vX-GGR"/>
...
                    <view key="view" id="R7h-bM-Wyo" customClass="MainView" customModule="Smartpad_macOS" customModuleProvider="target">
                        <rect key="frame" x="0.0" y="0.0" width="450" height="298"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <subviews>
                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="BsF-N6-EbN">
                                <rect key="frame" x="238" y="13" width="83" height="32"/>
                                <buttonCell key="cell" type="push" title="settings" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Qvx-IH-yDz">
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="system"/>
                                </buttonCell>
                                <accessibility description="settings" help="opens settings view" identifier="settingsButton"/>
                                <connections>
                                    <action selector="settingsButtonSelected:" target="Jhh-Bn-vsO" id="isT-g7-8Bs"/>
                                    <segue destination="8Ug-Lx-ZmC" kind="sheet" id="9hw-eP-yLA"/>
                                </connections>
                            </button>
                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="CkE-Te-BLp">
                                <rect key="frame" x="133" y="13" width="58" height="32"/>
                                <buttonCell key="cell" type="push" title="Pair" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="1Bc-yl-WYQ">
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="system"/>
                                </buttonCell>
                                <accessibility description="pair" help="opens pairing browser" identifier="pairButton"/>
                                <connections>
                                    <segue destination="fl2-zU-nxf" kind="sheet" id="Ouj-fd-h97"/>
...
                                    <action selector="sendInvite:" target="fl2-zU-nxf" id="ju4-It-C5M"/>
                                </connections>
                            </button>
                            <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OlN-EL-SJ4">
                                <rect key="frame" x="245" y="5" width="76" height="32"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                <buttonCell key="cell" type="push" title="Cancel" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="YkY-Gh-KWO">
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="system"/>
                                    <string key="keyEquivalent" base64-UTF8="YES">
Gw
</string>
                                </buttonCell>
...
                    <view key="view" id="jJ7-TO-OPt">
                        <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <subviews>
                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="J1m-E0-pJj">
                                <rect key="frame" x="189" y="223" width="72" height="32"/>
                                <buttonCell key="cell" type="push" title="unpair" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="q4Q-GE-ZgM">
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="system"/>
                                </buttonCell>
                                <accessibility description="unpair" help="unpairs device" identifier="unpairButton"/>
                                <connections>
                                    <action selector="unpairDevice:" target="8Ug-Lx-ZmC" id="X1q-GK-UeS"/>
...
                                <connections>
                                    <action selector="trackSpeedChanged:" target="8Ug-Lx-ZmC" id="a4A-3I-Z3P"/>
                                </connections>
                            </slider>
                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="oum-bb-PHy">
                                <rect key="frame" x="16" y="255" width="69" height="32"/>
                                <buttonCell key="cell" type="push" title="Close" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="cqR-kf-7Lj">
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="system"/>
                                </buttonCell>
                                <accessibility description="close" help="closes settings view" identifier="closeButton"/>
                                <connections>
                                    <action selector="closeButtonClicked:" target="8Ug-Lx-ZmC" id="ycr-fT-U23"/>
                                </connections>
                            </button>
                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Kc0-19-c3J">
                                <rect key="frame" x="167" y="266" width="116" height="16"/>
...
